--- a/index.html
+++ b/index.html
@@ -40,12 +40,16 @@
         </li>
     </Ul>
     <p>
-        Corta los plátanos en rodajas alargadas y fríelos en un sartén con aceite caliente. Deben quedar dorados, pero no secos. Reserva. <br>
-        Parte los tomates en cuatro. En una olla, añade los tomates, los chiles pasa y la raja de canela. Cocina a fuego bajo hasta que todo esté bien cocido. Deja enfriar y luego retira la cáscara de los tomates. <br>
-        En un sartén sin aceite, dora primero el ajonjolí y luego la pepitoria. Este paso es importante para que suelten todo su aroma. <br>
-        Coloca en la licuadora los tomates cocidos, los chiles, la canela, el ajonjolí, la pepitoria y las champurradas. Licúa hasta obtener una mezcla espesa. <br>
-        Vierte la mezcla en una olla mediana, añade el chocolate en trozos y cocina a fuego bajo, removiendo constantemente hasta que el chocolate se derrita por completo <br>
-        Una vez que el mole esté listo, incorpora las rodajas de plátano frito. Deja que hiervan juntos por unos minutos para que el plátano absorba bien el sabor del recado. <br>
+        1.Corta los plátanos en rodajas alargadas y fríelos en un sartén con aceite caliente. Deben quedar dorados, pero no secos. Reserva. <br>
+        2.Parte los tomates en cuatro. En una olla, añade los tomates, los chiles pasa y la raja de canela. Cocina a fuego bajo hasta que <br>
+        todo esté bien cocido. Deja enfriar y luego retira la cáscara de los tomates. <br>
+        3.En un sartén sin aceite, dora primero el ajonjolí y luego la pepitoria. Este paso es importante para que suelten todo su aroma. <br>
+        4.Coloca en la licuadora los tomates cocidos, los chiles, la canela, el ajonjolí, la pepitoria y las champurradas. Licúa hasta  <br>
+         obtener una mezcla espesa. <br>
+        5.Vierte la mezcla en una olla mediana, añade el chocolate en trozos y cocina a fuego bajo, removiendo constantemente hasta que <br>
+         el chocolate se derrita por completo <br>
+        6.Una vez que el mole esté listo, incorpora las rodajas de plátano frito. Deja que hiervan juntos por unos minutos para que el <br>
+         plátano absorba bien el sabor del recado. <br>
         Deja enfriar y sirve con ajonjolí tostado por encima. <br>
     </p>
 
